# universal-carrier-formatter

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  agents.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh
.github/workflows/: lint.yml  tests.yml
blueprints/: dhl_express.yaml
core/: __init__.py
docs/: ADDING_A_CARRIER.md  ARCHITECTURE.md  BLUEPRINT_STRUCTURE.md  BLUEPRINT_VS_PDF.md  BRIEF_SCORE_AND_IMPROVEMENTS.md  CHEAPEST_MODEL.md  CODE_STYLE.md  COST_EXPLANATION.md  DEVELOPMENT_PIPELINE.md  DOCKER.md  DOCKER_SCRIPTS.md  EXAMPLE_MAPPERS_DIFFERENCE.md  EXTRACTION_REPRODUCIBILITY.md  HOW_TO_CREATE_BLUEPRINT.md  HOW_TO_MAKE_MAPPER_FROM_PDF.md  HOW_TO_RUN.md  HOW_TO_USE_BLUEPRINT.md  LARAVEL_COMPARISON.md  LLM_EXTRACTION_FLOW.md  ONBOARDING.md  PDF_PARSER_DEMO.md  PDF_PARSER_PLAN.md  POC_SCENARIOS_REVIEW.md  README_VS_IMPLEMENTATION.md  REAL_WORLD_USAGE.md  SCHEMA_MIGRATION.md  SECURITY.md  SYSTEM_OVERVIEW.md  TABLE_DETECTION.md  TESTING.md  TEST_COVERAGE_REVIEW.md  TEST_ORGANIZATION.md  TEST_REVIEW_PDF_PARSER.md  VERSIONING.md  schema_contract_meta_schema.json
examples/: expected_output.json  messy_carrier_response.json  messy_dpd_response.json
examples/outputs/: README.md
mappers/: __init__.py  dpd_mapper.py  royal_mail.py
output/: dhl_express_api_schema_validators.py  openapi.yaml
scripts/: check_exceptions_in_extraction.py  debug_field_mappings.py  demo_end_to_end.py  demo_mapper.py  demo_royal_mail_mapper.py  export_schema_meta_schema.py  generate_pdf_parser_test_pdf.py  pre-commit.hook  run_parser.py  test.sh  test_pdf_parser.py  validate_schema.py
src/: __init__.py  _example_service_template.py  api.py  constraint_code_generator.py  extraction_pipeline.py  formatter.py  llm_extractor.py  mapper_generator.py  mapper_generator_cli.py  openapi_generator.py  pdf_parser.py
tests/: conftest.py  test_basic.py
(+60 files in other folders)
