[project]
name = "universal-carrier-formatter"
version = "0.1.0"
requires-python = ">=3.10"
description = "Transform carrier API docs and responses into a universal format"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
