[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-carrier-formatter"
version = "0.1.0"
requires-python = ">=3.10"
description = "Transform carrier API docs and responses into a universal format"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pydantic>=2.5.0",
    "jsonschema>=4.20.0",
    "click>=8.1.7",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "flake8>=6.1.0",
    "flake8-pyproject>=1.2.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501", "W503", "E203"]
exclude = [".git", "__pycache__", ".venv", "venv", ".eggs", "*.egg", "build", "dist", ".pytest_cache", "htmlcov"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true
